# MyCodeRepo

./: .clang-format  .gitignore  CMakeLists.txt  README.md
coord_transform/python/: main.py  transfroms.py
ctor_dtor/: main  main.cpp  mystring.h
delete_ghostcar/: delete_mirrorcar (1).py  delete_mirrorcar.py  o3d.py
design_pattern/singleton/: bench_mark.cpp  eager_singleton_v1.h  eager_singleton_v2.h  eager_singleton_v3.h  test_function.h
dnn_limu/01_encoder_decoder/: encoder_decoder_workframe.py
dockerfiles/: sparse4d.v2.dockerfile
effective_cpp/: 01_explicit.cpp  02_copy_constructor.cpp  03_copy_constructor.cpp  CMakeLists.txt
fsm/: simple_fsm.cpp
google_signalhandle/: CMakeLists.txt  main.cpp
map/: main.cpp
onnx_customed_layer/: custom_example.py  symbolic.py
point_pillar/: common_cuda.h  cuda2txt.h  preprocess_point_cuda.cu  preprocess_point_cuda.h
pycuda/: main.py  resize.py
rotated_iou/: CMakeLists.txt  readme.md
rotated_iou/box_iou_rotated/: CMakeLists.txt  box.h  box_iou_rotated.h  box_iou_rotated_cpu.cpp  box_iou_rotated_utils.h  main.cpp
rotated_iou/test/: CMakeLists.txt  rotated_iou_test.cpp
samplePlugin/: fcPlugin.h
scheduler/: cycler_scheduler.cpp
segment_fault/: how_to_add.md  main  main.cpp
smartptr_mem_cost/: main  main.cpp
torch_quant_demo/: main.py
trt_deploy_demo/: CMakeLists.txt  runMyNet.cpp  runPluginDemo.cpp
trt_deploy_demo/common/: logger.h  logging.h  trt_params.h
trt_deploy_demo/model/PluginDemo/: PluginDemo.cpp  PluginDemo.h  PluginDemo.py  export_custom_op.py  mrelu.cpp  mrelu.h  run_cppops.py
trt_deploy_demo/model/PluginDemo/torch_op/: CMakeLists.txt  hswish_op.cpp  mrelu_op.cpp
trt_deploy_demo/model/customed_op/: CMakeLists.txt  cpp_op.py  mline.cpp  python_op.py
trt_deploy_demo/model/mynet/: myNet.cpp  myNet.h  vergross.cpp  vergross.h  vergross.py
